k8s/back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  template:
    spec:
      containers:
      - name: back
        image: docker.pkg.github.com/git-gud-ndli/ndli2k19/back:latest
        imagePullPolicy: Always
