k8s/back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  type: ClusterIP
  ports:
  - name: back-port
    port: 3000
    targetPort: 3000
